--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,21 @@
 body{
 }
 
+body {
+  background-color: #06A4E7;
+  width: 40%;
+  margin: 0 auto; 
+}
+
+.name {
+  text-align: center;
+  margin: auto;
+  width: 80%;
+}
+
 .pic {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  width: 60%;
+}
+
+p {
+}
